--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.19.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
+  cloud_firestore: ^4.16.0
 
 
 dev_dependencies:
