--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^4.19.0
   provider: ^6.1.2
   cloud_firestore: ^4.16.0
+  image_picker: ^1.0.7
+  firebase_storage: ^11.7.0
 
 
 dev_dependencies:
