--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.28.0
   firebase_auth: ^4.19.0
+  cloud_firestore: ^4.16.1
   provider: ^6.1.2
-  cloud_firestore: ^4.16.0
   image_picker: ^1.0.7
   firebase_storage: ^11.7.0
-  fluttertoast: ^8.1.1
-
+  firebase_database: ^10.5.1
 
 dev_dependencies:
   flutter_test:
