--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission ndroid:name="android.permission.Read_EXTERNAL_STORAGE" />
+    <uses-permission android:name = "android.permission.CAMERA" />
+    <uses-permission android:name ="android.permission.INTERNET" />
     <application
         android:label="login"
         android:name="${applicationName}"
