--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^11.7.0
   firebase_database: ^10.5.1
 
+  path: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
