--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ flutter:
 
   # To add images to your application, add an images section, like this:
   assets:
-   - images/avatar.jpg
+   - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
